--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,16 @@
 
     <link rel="stylesheet" href="popup.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
-
 </head>
+
 <body>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <div class="pref">
         <input type="text" class="topic-search" id="search" >
         <button type="submit" class="btn-search" id="submit-button">Submit</button>
+        <img class="ref_button" id="ref_button" src="refresh.png" alt="ref_button">
+    </div>
+    <div >
     </div>
     <div class="projcard-container" id="news-container"></div>
     <!-- <div class="projcard-container">
@@ -85,6 +88,6 @@
         </div> -->
         
     </div>
-    <script src="popup.js" ></script>
+    <script src="scripts/popup.js" ></script>
 </body>
 </html>
