--- a/popup.html
+++ b/popup.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalized News Aggregator</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">    
     <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
-    <div class="pref">
+    <!-- <div class="pref">
         <input type="text" class="topic-search" id="search" >
         <button type="submit" class="btn-search" id="submit-button">Submit</button>
         <img class="ref_button" id="ref_button" src="refresh.png" alt="ref_button">
-    </div>
+    </div> -->
     
+    <span class="container-top">
+        <div class="search-box">
+            <button class="btn-search" id="submit-button"><i class="fas fa-search"></i></button>
+            <input type="text" class="input-search" id="search" placeholder="Type to Search News...">
+        </div>
+        <button class="ref_button" id="ref_button"><i class="fas fa-sync-alt"></i></button>
+    </span>
 
     <div class="projcard-container" id="news-container"></div>
     <!-- HTML !-->
