--- a/popup.html
+++ b/popup.html
@@ -14,11 +14,11 @@
         <button type="submit" class="btn-search" id="submit-button">Submit</button>
         <img class="ref_button" id="ref_button" src="refresh.png" alt="ref_button">
     </div> -->
-    
+    <h1>News Aggregator</h1>
     <span class="container-top">
         <div class="search-box">
             <button class="btn-search" id="submit-button"><i class="fas fa-search"></i></button>
-            <input type="text" class="input-search" id="search" placeholder="Type to Search News...">
+            <input type="text" class="input-search" id="search" placeholder="Type to Search News..." autocomplete="off" >
         </div>
         <button class="ref_button" id="ref_button"><i class="fas fa-sync-alt"></i></button>
     </span>
