--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,7 @@
         <img class="ref_button" id="ref_button" src="refresh.png" alt="ref_button">
     </div> -->
     <h1>News Aggregator</h1>
+    <!-- <img src="icon.jpeg" id="logo"> -->
     <span class="container-top">
         <div class="search-box">
             <button class="btn-search" id="submit-button"><i class="fas fa-search"></i></button>
